--- a/app/src/main/res/menu/logged_in_overflow.xml
+++ b/app/src/main/res/menu/logged_in_overflow.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/profile"
+        android:title="Profile"
+        app:showAsAction="never"/>
+
+    <item
         android:id="@+id/logout"
         android:title="Sign Out"
         app:showAsAction="never"/>
